Use yarn workspaces
See
https://github.com/yarnpkg/rfcs/blob/master/implemented/0000-workspaces-install-phase-1.md

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,6 @@
 .DS_Store
 **/bower_components
 /build
-/node_modules/
-/src/metrics_server/node_modules/
-/src/server_manager/node_modules/
+node_modules/
 /src/server_manager/install_scripts/do_install_script.ts
 yarn-error.log
