--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "bytes": "^3.0.0",
     "clipboard-polyfill": "^2.4.6",
+    "electron-updater": "^2.21.0",
     "eventemitter3": "^2.0.3",
     "node-forge": "^0.7.1",
     "raven-js": "^3.17.0",
