New oauth prototype

--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -9,12 +9,15 @@
     "email": "info@getoutline.org"
   },
   "dependencies": {
+    "body-parser": "^1.18.3",
     "bytes": "^3.0.0",
     "clipboard-polyfill": "^2.4.6",
     "electron-updater": "^2.21.0",
     "eventemitter3": "^2.0.3",
+    "express": "^4.16.3",
     "node-forge": "^0.7.1",
     "raven-js": "^3.17.0",
+    "request": "^2.87.0",
     "request-lite": "^2.40.1"
   },
   "devDependencies": {
