--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/bytes": "^2.5.1",
     "@types/node-forge": "^0.6.9",
+    "@types/request": "^2.47.1",
     "bower": "^1.8.0",
     "browserify": "^14.5.0",
     "electron": "^1.8.7",
