Enable cron to activate weekly GeoIP updates

--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -29,10 +29,10 @@ LABEL shadowbox.github.release="${GITHUB_RELEASE}"
 RUN apk add --no-cache lsof curl
 
 COPY src/shadowbox/scripts scripts/
-COPY src/shadowbox/scripts/update_mmdb.sh /etc/periodic/weekly/
+COPY src/shadowbox/scripts/update_mmdb.sh /etc/periodic/weekly/update_mmdb
 
 RUN sh ./scripts/install_shadowsocks.sh $SS_VERSION
-RUN /etc/periodic/weekly/update_mmdb.sh
+RUN /etc/periodic/weekly/update_mmdb
 
 WORKDIR /root/shadowbox
 
