Instructions UI for AWS and GCP

--- a/src/server_manager/bower.json
+++ b/src/server_manager/bower.json
@@ -19,6 +19,7 @@
     "font-roboto": "PolymerElements/font-roboto-local#^1.1.0",
     "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^2.1.1",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
+    "iron-collapse": "PolymerElements/iron-collapse#^2.2.1",
     "iron-fit-behavior": "PolymerElements/iron-fit-behavior#^2.1.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.1",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
