move to electron-updater 3.x, now required by electron-builder

--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -13,7 +13,7 @@
     "body-parser": "^1.18.3",
     "bytes": "^3.0.0",
     "clipboard-polyfill": "^2.4.6",
-    "electron-updater": "^2.23.3",
+    "electron-updater": "^3.1.2",
     "eventemitter3": "^2.0.3",
     "express": "^4.16.3",
     "node-forge": "^0.7.1",
@@ -24,6 +24,7 @@
     "@types/bytes": "^2.5.1",
     "@types/node-forge": "^0.6.9",
     "@types/request": "^2.47.1",
+    "@types/semver": "^5.5.0",
     "bower": "^1.8.0",
     "browserify": "^14.5.0",
     "electron": "^2.0.8",
