Restrict outbound access to localhost/LAN

--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -30,6 +30,8 @@ RUN apk add --no-cache lsof curl
 
 COPY src/shadowbox/scripts scripts/
 COPY src/shadowbox/scripts/update_mmdb.sh /etc/periodic/weekly/update_mmdb
+# TODO: remove the ACL file, used to prevent access to localhost and LAN, when migrating to shadowsocks-go.
+COPY src/shadowbox/shadowbox.acl /etc/shadowsocks/shadowsocks.acl
 
 RUN sh ./scripts/install_shadowsocks.sh $SS_VERSION
 RUN /etc/periodic/weekly/update_mmdb
