--- a/src/metrics_server/package.json
+++ b/src/metrics_server/package.json
@@ -9,7 +9,7 @@
     "@google-cloud/bigquery": "^0.9.6"
   },
   "devDependencies": {
-    "@google-cloud/functions-emulator": "1.0.0-alpha.23",
+    "@google-cloud/functions-emulator": "1.0.0-beta.5",
     "@types/express": "^4.0.36"
   }
 }
