switch to outline-ss-server releases

--- a/src/shadowbox/docker/Dockerfile
+++ b/src/shadowbox/docker/Dockerfile
@@ -12,15 +12,14 @@
 # See the License for the specific language governing permissions and
 # limitations under the License.
 
-FROM golang:1-alpine as outline-ss-server
-RUN apk add --no-cache git
-RUN go get github.com/Jigsaw-Code/outline-ss-server
-
 # See versions at https://hub.docker.com/_/node/
 FROM node:8.11.3-alpine
 
 # Versions can be found at https://github.com/shadowsocks/shadowsocks-libev/releases
 ARG SS_VERSION=3.2.0
+
+# Versions can be found at https://github.com/Jigsaw-Code/outline-ss-server/releases
+ARG SS_GO_VERSION=0.0.1
 
 # Save metadata on the software versions we are using.
 LABEL shadowbox.node_version=8.11.3
@@ -42,7 +41,7 @@ RUN /etc/periodic/weekly/update_mmdb
 
 WORKDIR /root/shadowbox
 
-COPY --from=outline-ss-server /go/bin/outline-ss-server ./bin/
+RUN mkdir bin && curl -SsL https://github.com/Jigsaw-Code/outline-ss-server/releases/download/v${SS_GO_VERSION}/outline-ss-server_${SS_GO_VERSION}_linux_x86_64.tar.gz | tar xz -C bin outline-ss-server
 COPY third_party/prometheus/prometheus ./bin/
 COPY src/shadowbox/package.json .
 COPY yarn.lock .
