build metrics server on CI

--- a/.travis.yml
+++ b/.travis.yml
@@ -47,6 +47,7 @@ jobs:
     # stage.
     - stage: build and unit test
       script:
+        - yarn do metrics_server/build
         - yarn do shadowbox/server/build
         - yarn do shadowbox/test
         - yarn do server_manager/electron_app/build
