--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -9,6 +9,22 @@ tags:
   - name: Access Key
     description: Access key functions
 paths:
+  /server:
+    get:
+      tags:
+        - Server
+      description: Returns information about the server
+      responses:
+        '200':
+          description: Server information
+          content:
+            application/json:
+              schema:
+                $ref: "#/components/schemas/Server"
+              examples:
+                '0':
+                  value: >-
+                    {"name":"My Server","serverId":"000-000-000-000","metricsEnabled":true,"createdTimestampMs":1536613192052,"portForNewAccessKeys":1234}
   /name:
     put:
       description: Renames the server
@@ -31,22 +47,6 @@ paths:
           description: Server renamed successfully
         '400':
           description: Invalid name
-  /server:
-    get:
-      tags:
-        - Server
-      description: Returns information about the server
-      responses:
-        '200':
-          description: Server information
-          content:
-            application/json:
-              schema:
-                $ref: "#/components/schemas/Server"
-              examples:
-                '0':
-                  value: >-
-                    {"name":"My Server","serverId":"000-000-000-000","metricsEnabled":true,"createdTimestampMs":1536613192052,"portForNewAccessKeys":1234}
   /access-keys:
     post:
       description: Creates a new access key
@@ -148,12 +148,12 @@ paths:
           description: Access key inexistent
   /metrics/transfer:
     get:
-      description: Returns the data transferred per user
+      description: Returns the data transferred per access key
       tags:
         - Access Key
       responses:
         '200':
-          description: The data tranferred by user
+          description: The data tranferred by each access key
           content:
             application/json:
               schema:
