i18n infrastructure, extract strings

--- a/src/server_manager/bower.json
+++ b/src/server_manager/bower.json
@@ -16,12 +16,14 @@
   ],
   "dependencies": {
     "app-layout": "PolymerElements/app-layout#^2.0.4",
+    "app-localize-behavior": "PolymerElements/app-localize-behavior#^2.0.1",
     "font-roboto": "PolymerElements/font-roboto-local#^1.1.0",
     "iron-autogrow-textarea": "PolymerElements/iron-autogrow-textarea#^2.1.1",
     "iron-icons": "PolymerElements/iron-icons#^2.0.1",
     "iron-collapse": "PolymerElements/iron-collapse#^2.2.1",
     "iron-fit-behavior": "PolymerElements/iron-fit-behavior#^2.1.0",
     "iron-pages": "PolymerElements/iron-pages#^2.0.1",
+    "outline-i18n": "Jigsaw-Code/outline-i18n#^0.0.7",
     "paper-button": "PolymerElements/paper-button#^2.0.0",
     "paper-checkbox": "PolymerElements/paper-checkbox#^2.0.4",
     "paper-dialog": "PolymerElements/paper-dialog#^2.0.1",
