Refine quota model

--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -269,7 +269,7 @@ components:
           type: integer
     AccessKeyQuota:
       properties:
-        quota:
+        data:
           type: object
           properties:
             bytes:
