--- a/package.json
+++ b/package.json
@@ -2,23 +2,28 @@
   "name": "outline-server",
   "private": true,
   "devDependencies": {
+    "@bazel/bazel": "latest",
+    "@bazel/buildifier": "latest",
+    "@bazel/ibazel": "latest",
+    "@bazel/jasmine": "^0.35.0",
+    "@bazel/typescript": "latest",
     "@types/jasmine": "^2.5.53",
+    "@types/node": "^12.6.9",
     "clang-format": "^1.2.2",
     "husky": "^1.3.1",
     "jasmine": "^2.6.0",
     "tslint": "^5.9.1",
-    "typescript": "^3.2.2"
+    "typescript": "~3.4.0"
   },
   "engines": {
     "yarn": ">=1.0"
   },
   "scripts": {
     "clean": "rm -rf src/server_manager/bower_components/ src/*/node_modules/ build/ node_modules/ src/server_manager/install_scripts/do_install_script.ts",
-    "do": "bash ./scripts/do_action.sh"
+    "do": "bash ./scripts/do_action.sh",
+    "build": "bazel build //...",
+    "test": "bazel test //..."
   },
-  "workspaces": [
-    "src/*"
-  ],
   "husky": {
     "hooks": {
       "pre-commit": "yarn tslint --fix 'src/**/*.ts' -e '**/bower_components/**' -e '**/node_modules/**' && yarn git-clang-format"
