Finish infrastructure directory

--- a/src/shadowbox/infrastructure/BUILD
+++ b/src/shadowbox/infrastructure/BUILD
@@ -3,12 +3,45 @@ load("@npm_bazel_typescript//:index.bzl", "ts_library")
 load("@npm_bazel_jasmine//:index.bzl", "jasmine_node_test")
 
 ts_library(
+    name = "clock",
+    srcs = ["clock.ts"],
+    deps = [
+        "@npm//@types/node",
+    ],
+)
+
+ts_library(
+    name = "filesystem_text_file",
+    srcs = ["filesystem_text_file.ts"],
+    deps = [
+        ":text_file",
+        "@npm//@types/node",
+    ],
+)
+
+ts_library(
+    name = "file_read",
+    srcs = ["file_read.ts"],
+    deps = [
+        "@npm//@types/node",
+    ],
+)
+
+ts_library(
+    name = "follow_redirects",
+    srcs = ["follow_redirects.ts"],
+    deps = [
+        "@npm//request-lite",
+        "@npm//@types/node",
+    ],
+)
+
+ts_library(
     name = "get_port",
     srcs = ["get_port.ts"],
     deps = [
         "@npm//@types/node",
     ],
-    tsconfig = "//:tsconfig.nodejs.json",
 )
 
 ts_library(
@@ -19,7 +52,6 @@ ts_library(
         "@npm//@types/jasmine",
         "@npm//@types/node",
     ],
-    tsconfig = "//:tsconfig.nodejs.json",
 )
 
 jasmine_node_test(
@@ -28,4 +60,64 @@ jasmine_node_test(
         ":get_port_test_lib",
     ],
     size = "small",
+)
+
+ts_library(
+    name = "json_config",
+    srcs = ["json_config.ts"],
+    deps = [
+        ":file_read",
+        ":logging",
+        "@npm//@types/node",
+    ],
+)
+
+ts_library(
+    name = "logging",
+    srcs = ["logging.ts"],
+    deps = [
+        "@npm//@types/node",
+    ],
+)
+
+ts_library(
+    name = "prometheus_scraper",
+    srcs = ["prometheus_scraper.ts"],
+    deps = [
+        ":logging",
+        "@npm//@types/mkdirp",
+        "@npm//@types/node",
+        "@npm//mkdirp",
+        "@npm//js-yaml",
+    ],
+)
+
+ts_library(
+    name = "rollout",
+    srcs = ["rollout.ts"],
+    deps = [
+        "@npm//@types/node",
+    ],
+)
+
+ts_library(
+    name = "rollout_test_lib",
+    srcs = ["rollout.spec.ts"],
+    deps = [
+        ":rollout",
+        "@npm//@types/jasmine",
+    ],
+)
+
+jasmine_node_test(
+    name = "rollout_test",
+    deps = [
+        ":rollout_test_lib",
+    ],
+    size = "small",
+)
+
+ts_library(
+    name = "text_file",
+    srcs = ["text_file.ts"],
 )
