--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@bazel/jasmine": "^0.35.0",
     "@bazel/typescript": "latest",
     "@types/jasmine": "^2.5.53",
+    "@types/mkdirp": "^0.5.2",
     "@types/node": "^12.6.9",
     "clang-format": "^1.2.2",
     "husky": "^1.3.1",
@@ -28,5 +29,10 @@
     "hooks": {
       "pre-commit": "yarn tslint --fix 'src/**/*.ts' -e '**/bower_components/**' -e '**/node_modules/**' && yarn git-clang-format"
     }
+  },
+  "dependencies": {
+    "js-yaml": "^3.13.1",
+    "mkdirp": "^0.5.1",
+    "request-lite": "^2.40.1"
   }
 }
