--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/jasmine": "^2.5.53",
     "@types/mkdirp": "^0.5.2",
     "@types/node": "^12.6.9",
+    "@types/randomstring": "^1.1.6",
+    "@types/restify": "2",
     "clang-format": "^1.2.2",
     "husky": "^1.3.1",
     "jasmine": "^2.6.0",
@@ -33,6 +35,10 @@
   "dependencies": {
     "js-yaml": "^3.13.1",
     "mkdirp": "^0.5.1",
-    "request-lite": "^2.40.1"
+    "ShadowsocksConfig": "Jigsaw-Code/outline-shadowsocksconfig#^v0.0.9",
+    "randomstring": "^1.1.5",
+    "request-lite": "^2.40.1",
+    "restify": "4",
+    "uuid": "^3.3.2"
   }
 }
