--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
   "dependencies": {
     "js-yaml": "^3.13.1",
     "mkdirp": "^0.5.1",
-    "ShadowsocksConfig": "Jigsaw-Code/outline-shadowsocksconfig#^v0.0.9",
+    "ShadowsocksConfig": "Jigsaw-Code/outline-shadowsocksconfig",
     "randomstring": "^1.1.5",
     "request-lite": "^2.40.1",
     "restify": "4",
