Add external binaries as deps

--- a/src/shadowbox/infrastructure/BUILD
+++ b/src/shadowbox/infrastructure/BUILD
@@ -91,6 +91,9 @@ ts_library(
         "@npm//mkdirp",
         "@npm//js-yaml",
     ],
+    data = [
+        "@prometheus//:prometheus",
+    ],
 )
 
 ts_library(
