--- a/src/shadowbox/server/BUILD
+++ b/src/shadowbox/server/BUILD
@@ -109,6 +109,9 @@ ts_library(
         "@npm//mkdirp",
         "@npm//@types/node",
     ],
+    data = [
+        "@outline-ss-server//:outline-ss-server",
+    ],
 )
 
 ts_library(
