Respond to comments, add to integration test

--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -44,7 +44,7 @@ paths:
                   type: number
             examples:
               '0':
-                value: '{port: 12345}'
+                value: '{"port": 12345}'
       responses:
         '204':
           description: The default port was sucessfully changed.
