Create an endpoint to change the default port for new access keys (#461)
* Add an endpoint to set a new port for access keys

* post commit formatting

* Document the new api

* Remove enum in errors

* Respond to review comments

* Respond to review comments

* Rename to ShadowboxError and add copywright header

* Move to errors.ts

* Respond to coments in access_key.ts

* Move to errors.ts

* More renames

* post commit formatting

* More review responses

* Correctly convert invalid port number to string

* More renaming

* post commit formatting

* Respond to review comments

* Fix issue using parseInt

* Change endpoint URL

* formatting

* Respond to more review comments

* Respond to comments, add to integration test

* post commit formatting

* Move invalidPortArgument into a local

* formatting

* More review

* more review

* formatting

* disambiguate errors using restify types

* formatting

* fix the integration test

--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -28,6 +28,31 @@ paths:
                 '0':
                   value: >-
                     {"name":"My Server","serverId":"000-000-000-000","metricsEnabled":true,"createdTimestampMs":1536613192052,"portForNewAccessKeys":1234}
+  /server/port-for-new-access-keys:
+    put:
+      description: Changes the default port for newly created access keys.  This can be a port already used for access keys.
+      tags:
+        - Access Key
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              type: object
+              properties:
+                port:
+                  type: number
+            examples:
+              '0':
+                value: '{"port": 12345}'
+      responses:
+        '204':
+          description: The default port was sucessfully changed.
+        '400':
+          description: The requested port wasn't an integer from 1 through 65535, or the request had no port parameter.
+        '409':
+          description: The requested port was already in use by another service.
+  
   /name:
     put:
       description: Renames the server
