Fix at electron v7.0.0
electron-builder has trouble finding a set version of electron when it
is specified as ^7.0.0.  Since 7.0.0 is the latest electron version, fix
at that version.  We will set ^7.0.0 whn more become available.

--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -28,7 +28,7 @@
     "@types/semver": "^5.5.0",
     "bower": "^1.8.0",
     "browserify": "^14.5.0",
-    "electron": "^7.0.0",
+    "electron": "7.0.0",
     "electron-builder": "^21.2.0",
     "electron-icon-maker": "^0.0.4",
     "gulp": "^4.0.0",
