Try to convert to a class

--- a/src/server_manager/package.json
+++ b/src/server_manager/package.json
@@ -9,6 +9,8 @@
     "email": "info@getoutline.org"
   },
   "dependencies": {
+    "@polymer/app-localize-behavior": "^3.0.1",
+    "@polymer/decorators": "^3.0.0",
     "@polymer/polymer": "^3.3.0",
     "@sentry/electron": "^0.8.1",
     "body-parser": "^1.18.3",
