Create an endpoint to change the server's hostname.
This is the backend only, and does not check if the hostname exists or points to a Shadowbox
server.  Users have the responsibility of double checking that the
hostname and DNS if necessary are properly set up and specified.

--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -16,7 +16,8 @@
     "randomstring": "^1.1.5",
     "request-lite": "^2.40.1",
     "restify": "^4.3.0",
-    "uuid": "^3.1.0"
+    "uuid": "^3.1.0",
+    "validator": "^12.0.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^3.11.2",
