--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -28,11 +28,11 @@ paths:
                 '0':
                   value: >-
                     {"name":"My Server","serverId":"000-000-000-000","metricsEnabled":true,"createdTimestampMs":1536613192052,"portForNewAccessKeys":1234, "version": "1.0.0"}
-  /server/hostname:
+  /server/hostname-for-new-access-keys:
     put:
       tags:
         - Server
-      description: Changes the server's hostname.  Must be a valid hostname or IP address.
+      description: Changes the hostname for new access keys.  DNS must be set up for the hostname independently of this API.
       requestBody:
         required: true 
         content:
@@ -52,8 +52,10 @@ paths:
           description: The hostname was successfully changed.
         '400':
           description: An invalid hostname or IP address was provided.
+        '404':
+          description: The given hostname doesn't point to an equivalent Shadowbox server
         '500':
-          description: An internal error occurred.
+          description: An internal error occurred.  This could be thrown if there were network errors while validating the hostname
 
   /server/port-for-new-access-keys:
     put:
