--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -1,7 +1,7 @@
 {
   "name": "outline-server",
   "private": true,
-  "version": "1.0.0",
+  "version": "1.1.0",
   "description": "Outline server",
   "main": "build/server/main.js",
   "author": "Outline",
@@ -11,13 +11,13 @@
   ],
   "dependencies": {
     "ShadowsocksConfig": "Jigsaw-Code/outline-shadowsocksconfig#^v0.0.9",
+    "ip-regex": "^4.1.0",
     "js-yaml": "^3.12.0",
     "prom-client": "^11.1.3",
     "randomstring": "^1.1.5",
     "request-lite": "^2.40.1",
     "restify": "^4.3.0",
-    "uuid": "^3.1.0",
-    "validator": "^12.0.0"
+    "uuid": "^3.1.0"
   },
   "devDependencies": {
     "@types/js-yaml": "^3.11.2",
