--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -254,7 +254,7 @@ paths:
         '400':
           description: Invalid data limit
     delete:
-      description: Removes the access key data limit, lifting data transfer restrictions on all access key.
+      description: Removes the access key data limit, lifting data transfer restrictions on all access keys.
       tags:
         - Access Key
         - Limit
