Fix typos in the API documentation

--- a/src/shadowbox/server/api.yml
+++ b/src/shadowbox/server/api.yml
@@ -195,7 +195,7 @@ paths:
               $ref: "#/components/schemas/DataLimit"
             examples:
               '0':
-                value: "{bytes: 10000}"
+                value: '{name: "New Key Name"}'
       responses:
         '204':
           description: Access key renamed successfully
@@ -274,7 +274,7 @@ paths:
                 $ref: "#/components/schemas/DataLimit"
               examples:
                 '0':
-                  value: "limit: {bytes: 10000}"
+                  value: "{limit: {bytes: 10000}}"
       responses:
         '204':
           description: Access key data limit set successfully
