--- a/src/shadowbox/package.json
+++ b/src/shadowbox/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "outline-server",
+  "name": "shadowbox",
   "private": true,
   "version": "1.2.0",
   "description": "Outline server",
@@ -13,6 +13,7 @@
     "ShadowsocksConfig": "Jigsaw-Code/outline-shadowsocksconfig#^v0.0.9",
     "ip-regex": "^4.1.0",
     "js-yaml": "^3.12.0",
+    "outline-metrics-server": "*",
     "prom-client": "^11.1.3",
     "randomstring": "^1.1.5",
     "request-lite": "^2.40.1",
